k8s/helm/charts/k8s_files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giropops
spec:
  replicas: 5
  selector:
    matchLabels:
      app: giropops
  template:
    metadata:
      labels:
        app: giropops
    spec:
      containers:
        - name: giropops
          image: linuxtips/nginx-prometheus-exporter:1.0.0
          ports:
          - containerPort: 80
