k8s/helm/charts/k8s_files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops
  labels:
    app: giropops
  namespace: default
spec:
  ports:
  - name: web
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: giropops
  sessionAffinity: None
  type: ClusterIP
